[gd_scene load_steps=3 format=3 uid="uid://b07rljcn3rxmd"]

[ext_resource type="Script" uid="uid://babnfr36l0lhq" path="res://components/collisions/hurtbox_2d.gd" id="1_mwqdp"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8k7qw"]
size = Vector2(18, 38.5)

[node name="Hurtbox2D" type="Area2D"]
script = ExtResource("1_mwqdp")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-2, -6)
shape = SubResource("RectangleShape2D_8k7qw")

[node name="DisableTimer" type="Timer" parent="."]

[connection signal="timeout" from="DisableTimer" to="." method="_on_disable_timer_timeout"]
